# llmcompiler

./: .env.example  .gitignore  README-zh.md  README.md  build.bat  pyproject.toml  requirements.txt  setup.py
.clinerules/: uv-project-guidelines.md
.github/workflows/: publish-to-pypi.yml  python-publish.yml
docs/: dag-demo.md  multi-param-dep-demo-zh.md  param-parser-info-zh.md
llmcompiler/chat/: launch.py  run.py
llmcompiler/custom_llms/: claude.py  claude3_compiler.py  openai.py
llmcompiler/few_shot/: example.py  few_shot.py  generate.py
llmcompiler/graph/: __init__.py  joiner.py  output_parser.py  plan_and_schedule.py  planner.py  prompt.py  rewrite.py  token_calculate.py  tool_message.py
llmcompiler/result/: chat.py
llmcompiler/service/: status.py
llmcompiler/tools/: basic.py  prompt.py  tools.py
llmcompiler/tools/basetool/: fund_basic.py  fund_basic_v1.py  fund_basic_v2.py  multi_param_dep_v1.py  multi_param_dep_v2.py  multi_param_dep_v3.py  stock_info_fake.py  tool_decorator.py
llmcompiler/tools/configure/: kwargs_clear.py  pydantic_oper.py  tool_decorator.py
llmcompiler/tools/dag/: dag_flow_params.py
llmcompiler/tools/generic/: action_input.py  action_output.py  render_description.py
llmcompiler/tools/math/: math_tools.py
llmcompiler/utils/date/: date.py
llmcompiler/utils/prompt/: prompt.py
llmcompiler/utils/string/: question_trim.py  string_format.py  string_sim.py
test/: test.py  test_custom_prompts.py  test_joiner_parser.py  testbak.py  testv1.py
test/tools/: test_multi_param_dep_v2.py
(+3 files in other folders)
